syntax = "proto3";
option java_multiple_files = true;
package it.unical.computerscience.pfsociety.plasticfee.protobuf.chat;

service ChatService {
  rpc message(User) returns (Message);
  rpc createUser(CreateUserRequest) returns(User);
  rpc getUser(GetUserRequest) returns(User);
}

message Message {
  int64 id = 1;
  string content = 2;
  string timestamp = 3;
}

message User {
  int64 id = 1;
  string username = 2;
}

message CreateUserRequest{
  string username=1;
  string password=2;
}

message GetUserRequest{
  int64 id=1;
}

/*
message User {
  string id = 1;
  string name = 2;
}

message Message {
  string id = 1;
  string content = 2;
  string timestamp = 3;
}

message Connect {
  User user = 1;
  bool active = 2;
}

message Close {}

service Broadcast {
  rpc CreateStream(Connect) returns (stream Message);
  rpc BroadcastMessage(Message) returns (Close);
}
*/